# Code-Quality-Intelligence-Analyst

./: AGENTS.md  README.md  Taskfile.yml  clean-state-checklist.md  decisions.md  handoff.md  render.yaml
backend/: .env.example  pyproject.toml  run_worker.py
backend/app/: main.py
backend/app/core/: config.py  errors.py
backend/app/db/: neo4j_client.py  qdrant_client.py  supabase_client.py
backend/app/schemas/: agent_output.py  analysis_task.py  chat.py  (+9 more)
backend/tests/: conftest.py  test_agent_output_schema.py  test_agents.py  test_analysis_graph.py  test_build_analysis_plan.py  test_chat_routes.py  test_chat_schema.py  test_chat_session_service.py  test_chatbot_service.py  test_chunk_builder_service.py  test_config.py  test_deduplicate_findings.py  test_embedding_service_embed_text.py  test_fail_analysis.py  test_file_discovery_service.py  test_file_filter_service.py  test_finding_deduplication_service.py  test_finding_normalization_service.py  test_finding_query_service.py  test_findings_routes.py  test_github_metadata_service.py  test_github_url_parser.py  test_google_ai_client.py  test_graph_context_service.py  test_load_scan_context.py  test_mark_scan_analyzed.py  test_neo4j_graph_tool.py  test_normalize_findings.py  test_openrouter_client.py  test_persist_findings.py  test_qdrant_retrieval_tool.py  test_rag_retrieval_service.py  test_rank_findings.py  test_repo_scan_worker.py  test_repo_validation_service.py  test_report_builder_service.py  test_report_embedding_service.py  test_report_metrics_service.py  test_report_pipeline.py  test_report_routes.py  (+10 more)
(+107 files in other folders)
